--- a/ferdev/src/app/components/menu/menu.component.html
+++ b/ferdev/src/app/components/menu/menu.component.html
@@ -6,6 +6,7 @@
         <button class="btn" [routerLink]="['/inicio']">Inicio</button>
         <button class="btn" [routerLink]="['/servicios']">Servicios</button>
         <button class="btn" [routerLink]="['/productos']">Productos</button>
+        <button class="btn" [routerLink]="['/portafolio']">Portafolio</button>
         <button class="btn" [routerLink]="['/acercade']">Acerca de</button>
     </div>
 </div>
