--- a/ferdev/src/app/pages/acercade/acercade.component.html
+++ b/ferdev/src/app/pages/acercade/acercade.component.html
@@ -23,6 +23,7 @@
                     <li>JAVASCRIPT</li>
                     <li>.NET FRAMEWORK</li>
                     <li>JAVA ANDROID</li>
+                    <li>Desarrollo web Frontend</li>
                 </ul>
             </nav>
             <nav class="listHab">
@@ -32,6 +33,21 @@
                     <li>ANGULAR</li>
                     <li>LARAVEL</li>
                     <li>LINUX</li>
+                    <li>Desarrollo Backend</li>
+                </ul>
+            </nav>
+        </div>
+        <div class="hab">
+            <h3>Reconocimientos y certificaciones</h3>
+            <nav class="listHab">
+                <ul>
+                    <li>Diploma de primer lugar en BASES DE DATOS TRANSC-SQL (ICO)</li>
+                    <li>Diploma de primer lugar en SEGURIDAD EN REDES (ICO)</li>
+                    <li>Diploma de primer lugar en DESARROLLO DE APLICACIONES XAMARIN (ICO)</li>
+                    <li>Certificación CISCO ITESSENTIALS (UTCV)</li>
+                    <li>Certificación CISCO ROUTING&SWITCHING l (UTCV)</li>
+                    <li>Certificación CISCO ROUTING&SWITCHING ll (UTCV)</li>
+                    <li>Certificación CSICO LINUX ESSENTIALS (UTCV)</li>
                 </ul>
             </nav>
         </div>
