--- a/ferdev/src/app/pages/portafolio/portafolio.component.html
+++ b/ferdev/src/app/pages/portafolio/portafolio.component.html
@@ -15,13 +15,20 @@
         </div>
         <div class="descripcion">
             <h2>Acrol</h2>
-            <p>Aplicación móvil nativa para Android, creada para administrar los productos, ventas, clientes, remisiones, de cualquier negocio del área automotriz.</p>
+            <p>
+                Acrol es una aplicación móvil nativa para Android la cual, se desarrolló para llevar el control del inventario de una tienda del giro automotriz. La aplicación permite dar de alta productos, dividirlos por categorías, marcas, proveedores. Permite también
+                llevar un control del registro de cliente y realizar remisiones de compras. Esta aplicación permite también el uso de la cámara del dispositivo para capturar imágenes que se utilizan para dar de alta una categoría, subcategoría, marca
+                y producto.
+            </p>
         </div>
     </div>
     <div class="acrol">
         <div class="descripcion">
             <h2>Chevron</h2>
-            <p>Aplicación móvil nativa para Android, creada para administrar los productos, ventas, clientes, remisiones, de cualquier negocio del área automotriz.</p>
+            <p>
+                Diseño conceptual para el sitio web oficial de Chevron, aquí se emplean técnicas de diseño modernas, así como también utilizando conceptos sobre diseño de interfaces de usuario. El diseño nos permite conceptualizar la forma en que el usuario puede interactuar
+                con un sitio web de estilo 'moderno', considerando que la tendencia actual se inclina hacia mejorar la experiencia de usuario dentro de nuestros sitios web.
+            </p>
         </div>
         <div class="imagen imgCh">
             <img src="../../../assets/img/Chevron.jpg" alt="" class="imgChevron">
@@ -33,17 +40,51 @@
         </div>
         <div class="descripcion">
             <h2>Veracruz</h2>
-            <p>Aplicación móvil nativa para Android, creada para administrar los productos, ventas, clientes, remisiones, de cualquier negocio del área automotriz.</p>
+            <p>
+                Sitio web orientado al sector turístico, considerando la experiencia de usuario, se logró crear un sitio web fascinante el cual nos permite tener una colección de destinos turísticos en la entidad Veracruzana. Este sitio fue diseñado de una forma especial,
+                pues permite a los visitantes del sitio poder tener una vista guiada a través de fotos, los lugares turísticos a los que puede acudir, así como información acerca de los establecimientos de comida, diversión, entre otros, que le permiten
+                tener una idea más clara sobre qué puede hacer en su lugar de destino.
+            </p>
         </div>
     </div>
     <div class="acrol">
         <div class="descripcion">
-            <h2>Acrol</h2>
-            <p>Aplicación móvil nativa para Android, creada para administrar los productos, ventas, clientes, remisiones, de cualquier negocio del área automotriz.</p>
+            <h2>Centinela</h2>
+            <p>
+                Centinela es una aplicación móvil que actualmente se encuentra en producción, esta aplicación está orientada al IoT (Internet of Things), la cual, a través de un servicio web, se conecta a varios dispositivos de IoT que nos permitirán mejorar la seguridad
+                del hogar. El objetivo de esta app al conectarse con sensores que estarán instalados dentro del hogar, nos permitirá poder mantener un control sobre los registros de la información que se recaba de cada uno de los sensores, la cual, una
+                vez obtenida, se puede procesar para realizar análisis que nos permitan mejorar la seguridad de nuestro hogar.
+            </p>
         </div>
         <div class="imagen imgCn">
             <img src="../../../assets/img/centinela1.jfif" alt="" class="imgCentinela">
             <img src="../../../assets/img/centinela2.jfif" alt="" class="imgCentinela">
+        </div>
+    </div>
+    <div class="fcrypy">
+        <div class="imgPy"></div>
+        <div class="descPy">
+            <div class="dsc">
+                <h1>Un ransomware para la educación.</h1>
+                <br>
+                <p>
+                    Fcry.py es un script creado en Python el cual recorre los dos primeros niveles de los directorios que se encuentran dentro de la carpeta del usuario (Windows o Linux), encripta, cambia su extensión y también (en su más reciente versión) permite realizar
+                    capturas de pantalla del usuario. Fcry.py es un proyecto con fines educativos, el cual, nos permite explorar la forma en que un Ransomware "ataca" uno o varios equipos dentro de una red local de computadoras, con este proyecto, se
+                    pretende también concientizar a los usuarios y empresas, sobre el manejo correcto de sus sistemas, pues muchas de las veces, la poca inversión dentro (en el caso de las empresas) de sus departamentos a fines, puede ser factor crucial
+                    para que este sea víctima de un ataque de este tipo.
+                </p>
+                <p style="text-align: center;">
+                    <strong>
+                    Si deseas conocer más de este proyecto visita el repositorio oficial en mi cuenta de GitHub, allí podrás saber más sobre este proyecto.
+                  </strong>
+                </p>
+                <button class="btnPy" (click)="redirectToGitHub()">FCRY.PY en GitHub
+                  <img src="../../../assets/img/icons8-github-512.png" alt="" class="iconEnlace">
+                </button>
+            </div>
+            <div class="imgR">
+                <img src="../../../assets/img/Ransomware-512.png" alt="" class="imgRan">
+            </div>
         </div>
     </div>
 </div>
