--- a/ferdev/src/app/pages/portafolio/portafolio.component.css
+++ b/ferdev/src/app/pages/portafolio/portafolio.component.css
@@ -39,6 +39,14 @@
     float: left;
 }
 
+.descripcion {
+    padding: 5%;
+}
+
+p {
+    text-align: justify;
+}
+
 .imgAc {
     background: linear-gradient(270deg, rgb(253, 254, 255) 0%, rgb(250, 203, 75) 13.5%, rgb(243, 164, 17) 33.33%, rgb(73, 55, 15) 100%) !important;
 }
@@ -76,4 +84,65 @@
     float: left;
     margin-left: 13%;
     margin-top: 5%;
+}
+
+.fcrypy {
+    width: 100%;
+    height: 1200px;
+    background-color: white;
+}
+
+.imgPy {
+    width: 100%;
+    height: 400px;
+    background-image: url("../../../assets/img/ferdev_background_web.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
+.descPy {
+    width: 100%;
+    height: 800px;
+    /*background-color: rebeccapurple;*/
+}
+
+.dsc,
+.imgR {
+    width: 50%;
+    height: 800px;
+    /*background-color: rosybrown;*/
+    float: left;
+}
+
+h1 {
+    font-size: 60px;
+}
+
+.dsc {
+    padding-top: 12%;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
+.imgR {
+    padding-top: 10%;
+    padding-left: 10%;
+    padding-right: 2%;
+}
+
+.imgRan {
+    width: 100%;
+}
+
+.btnPy {
+    color: white;
+    width: 300px;
+    border-style: none;
+    border-radius: 20px;
+    background: linear-gradient(250deg, rgb(82, 146, 209) 0%, rgb(82, 178, 241) 13.5%, rgb(23, 145, 221) 33.33%, rgb(2, 96, 173) 100%) !important;
+}
+
+.iconEnlace {
+    width: 50px;
 }
