--- a/ferdev/src/app/components/menu/menu.component.html
+++ b/ferdev/src/app/components/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="menu">
     <div class="logo">
-        <img src="../../../assets/img/logo_fer.png" alt="" class="imgLogo">
+        <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/logo_fer.png" alt="" class="imgLogo">
     </div>
     <div class="men">
         <button class="btn" [routerLink]="['/inicio']">Inicio</button>
