--- a/ferdev/src/app/pages/acercade/acercade.component.html
+++ b/ferdev/src/app/pages/acercade/acercade.component.html
@@ -5,7 +5,7 @@
 <div class="containerBody">
     <div class="perfil">
         <div class="logo">
-            <img src="../../../assets/img/logo_fer.png" alt="" class="logoImg">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/logo_fer.png" alt="" class="logoImg">
         </div>
         <div class="descripcion">
             <h1 class="titulo">FERDEV</h1>
@@ -60,13 +60,13 @@
         </div>
         <div class="btnContact">
             <a href="https://www.instagram.com/fernand_117/" class="enlace" target="_blank">
-                <img src="../../../assets/img/icons8-instagram-480.png" alt="" class="iconEnlace">
+                <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/icons8-instagram-480.png" alt="" class="iconEnlace">
             </a>
             <a href="https://www.linkedin.com/in/luis-fernando-leyva-luna-937a29129/" class="enlace" target="_blank">
-                <img src="../../../assets/img/icons8-linkedin-100.png" alt="" class="iconEnlace">
+                <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/icons8-linkedin-100.png" alt="" class="iconEnlace">
             </a>
             <a href="https://github.com/Fernand117" class="enlace" target="_blank">
-                <img src="../../../assets/img/icons8-github-100.png" alt="" class="iconEnlace">
+                <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/icons8-github-100.png" alt="" class="iconEnlace">
             </a>
         </div>
     </div>
