--- a/ferdev/src/app/pages/portafolio/portafolio.component.html
+++ b/ferdev/src/app/pages/portafolio/portafolio.component.html
@@ -9,9 +9,9 @@
 <div class="containerBody">
     <div class="acrol">
         <div class="imagen imgAc">
-            <img src="../../../assets/img/acrol_app.jpeg" alt="" class="imgAcrol">
-            <img src="../../../assets/img/acrol_app1.png" alt="" class="imgAcrol">
-            <img src="../../../assets/img/acrol_app2.png" alt="" class="imgAcrol">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/acrol_app.jpeg" alt="" class="imgAcrol">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/acrol_app1.png" alt="" class="imgAcrol">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/acrol_app2.png" alt="" class="imgAcrol">
         </div>
         <div class="descripcion">
             <h2>Acrol</h2>
@@ -31,12 +31,12 @@
             </p>
         </div>
         <div class="imagen imgCh">
-            <img src="../../../assets/img/Chevron.jpg" alt="" class="imgChevron">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/Chevron.jpg" alt="" class="imgChevron">
         </div>
     </div>
     <div class="acrol">
         <div class="imagen imgVr">
-            <img src="../../../assets/img/Veracruz.jpg" alt="" class="imgChevron">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/Veracruz.jpg" alt="" class="imgChevron">
         </div>
         <div class="descripcion">
             <h2>Veracruz</h2>
@@ -57,8 +57,8 @@
             </p>
         </div>
         <div class="imagen imgCn">
-            <img src="../../../assets/img/centinela1.jfif" alt="" class="imgCentinela">
-            <img src="../../../assets/img/centinela2.jfif" alt="" class="imgCentinela">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/centinela1.jfif" alt="" class="imgCentinela">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/centinela2.jfif" alt="" class="imgCentinela">
         </div>
     </div>
     <div class="fcrypy">
@@ -79,11 +79,11 @@
                   </strong>
                 </p>
                 <button class="btnPy" (click)="redirectToGitHub()">FCRY.PY en GitHub
-                  <img src="../../../assets/img/icons8-github-512.png" alt="" class="iconEnlace">
+                  <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/icons8-github-512.png" alt="" class="iconEnlace">
                 </button>
             </div>
             <div class="imgR">
-                <img src="../../../assets/img/Ransomware-512.png" alt="" class="imgRan">
+                <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/Ransomware-512.png" alt="" class="imgRan">
             </div>
         </div>
     </div>
