--- a/ferdev/src/app/pages/productos/productos.component.html
+++ b/ferdev/src/app/pages/productos/productos.component.html
@@ -12,7 +12,7 @@
         <button class="btn btn-success" [routerLink]="['/Contacto']"> Solicitar más información > </button>
     </div>
     <div class="imagen">
-        <img src="../../../assets/img/sps_mockup.png" alt="" class="imagenMock">
+        <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/sps_mockup.png" alt="" class="imagenMock">
     </div>
 </div>
 
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="imagenGeneral">
-            <img src="../../../assets/img/general_prod.jpg" alt="" class="imgGeneral">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/general_prod.jpg" alt="" class="imgGeneral">
         </div>
     </div>
 
@@ -38,19 +38,19 @@
                 Podrás dividir tus productos en categorías, de esta forma podrás ahorrar tiempo en buscar y mostrar a tus clientes los productos disponibles en tu empresa.
             </p>
             <button class="btn btn-link" [routerLink]="['/Contacto']"><h4>Más información ></h4></button>
-            <img src="../../../assets/img/categorias.jpg" alt="" class="imgCategorias">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/categorias.jpg" alt="" class="imgCategorias">
         </div>
         <div class="subcategorias">
             <h1>Subcategorías</h1>
             <p>¿Dividir tus productos solo por categorías? El sistema te permite también crear subcategorías, esto te ayudará a tener en un mejor orden todos tus productos, de esta forma podrás consultarlos de una forma más profesional.</p>
             <button class="btn btn-link" [routerLink]="['/Contacto']"><h4>Más información ></h4></button>
-            <img src="../../../assets/img/subcategorias.jpg" alt="" class="imgCategorias">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/subcategorias.jpg" alt="" class="imgCategorias">
         </div>
     </div>
 
     <div class="question">
         <div class="imgquestion">
-            <img src="../../../assets/img/question.png" alt="" class="imgQuestions">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/question.png" alt="" class="imgQuestions">
         </div>
         <div class="response">
             <h2>¿Por qué invertir en un sistema de ventas?</h2>
@@ -66,10 +66,10 @@
                 en tus clientes y que estos confíen en los productos que les provees. Es por ello que integramos un panel donde podrás gestionarlas de manera muy simple</p>
         </div>
         <div class="imagenDetalles">
-            <img src="../../../assets/img/detalles.jpg" alt="" class="imgCont">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/detalles.jpg" alt="" class="imgCont">
         </div>
         <div class="imagenMarcas">
-            <img src="../../../assets/img/marcas.jpg" alt="" class="imgCont">
+            <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/marcas.jpg" alt="" class="imgCont">
         </div>
     </div>
 
