--- a/ferdev/src/app/pages/servicios/servicios.component.html
+++ b/ferdev/src/app/pages/servicios/servicios.component.html
@@ -13,7 +13,7 @@
     <div class="servicios">
         <div class="s">
             <div class="lgs">
-                <img src="../../../assets/img/icons8-web-design-100.png" alt="" class="icon">
+                <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/icons8-web-design-100.png" alt="" class="icon">
             </div>
             <div class="cs">
                 <h1>Sitios web</h1>
@@ -24,7 +24,7 @@
         </div>
         <div class="s">
             <div class="lgs">
-                <img src="../../../assets/img/icons8-web-design-100.png" alt="" class="icon">
+                <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/icons8-web-design-100.png" alt="" class="icon">
             </div>
             <div class="cs">
                 <h1>Aplicaciones web</h1>
@@ -35,7 +35,7 @@
         </div>
         <div class="s">
             <div class="lgs">
-                <img src="../../../assets/img/icons8-web-design-100.png" alt="" class="icon">
+                <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/icons8-web-design-100.png" alt="" class="icon">
             </div>
             <div class="cs">
                 <h1>Páginas web</h1>
@@ -46,7 +46,7 @@
         </div>
         <div class="s">
             <div class="lgs">
-                <img src="../../../assets/img/icons8-android-100.png" alt="" class="icon">
+                <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/icons8-android-100.png" alt="" class="icon">
             </div>
             <div class="cs">
                 <h1>Aplicaciones Android</h1>
@@ -57,7 +57,7 @@
         </div>
         <div class="s">
             <div class="lgs">
-                <img src="../../../assets/img/icons8-desktop-100.png" alt="" class="icon">
+                <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/icons8-desktop-100.png" alt="" class="icon">
             </div>
             <div class="cs">
                 <h1>Software basado en la web</h1>
@@ -68,7 +68,7 @@
         </div>
         <div class="s">
             <div class="lgs">
-                <img src="../../../assets/img/icons8-male-user-100.png" alt="" class="icon">
+                <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/icons8-male-user-100.png" alt="" class="icon">
             </div>
             <div class="cs">
                 <h1>Soporte técnico</h1>
