--- a/ferdev/src/app/pages/portafolio/portafolio.component.css
+++ b/ferdev/src/app/pages/portafolio/portafolio.component.css
@@ -95,7 +95,7 @@ p {
 .imgPy {
     width: 100%;
     height: 400px;
-    background-image: url("../../../assets/img/ferdev_background_web.jpg");
+    background-image: url("https://fernand117.github.io/ferdevPortafolio/assets/img/ferdev_background_web.jpg");
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
