--- a/ferdev/src/app/pages/acercade/acercade.component.html
+++ b/ferdev/src/app/pages/acercade/acercade.component.html
@@ -59,7 +59,7 @@
             <a href="mailto:fernando_rendel892@hotmail.com?Subject=Cotizacion%de%servicios" class="emailButton">Contactar por correo</a>
         </div>
         <div class="btnContact">
-            <a href="https://www.instagram.com/fernand_117/" class="enlace" target="_blank">
+            <a href="https://www.instagram.com/ferdevoficial/" class="enlace" target="_blank">
                 <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/icons8-instagram-480.png" alt="" class="iconEnlace">
             </a>
             <a href="https://www.linkedin.com/in/luis-fernando-leyva-luna-937a29129/" class="enlace" target="_blank">
