--- a/ferdev/src/app/pages/productos/productos.component.html
+++ b/ferdev/src/app/pages/productos/productos.component.html
@@ -9,7 +9,7 @@
         </h6>
     </div>
     <div class="boton">
-        <button class="btn btn-success" [routerLink]="['/Contacto']"> Solicitar más información > </button>
+        <button class="btn btn-success" [routerLink]="['/acercade']"> Solicitar más información > </button>
     </div>
     <div class="imagen">
         <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/sps_mockup.png" alt="" class="imagenMock">
@@ -23,7 +23,7 @@
             <div class="tdes">
                 <h2>La aplicación web para ventas ideal para tu negocio</h2>
                 <h4>Hemos desarrollado una aplicación web que se adecua a tus necesidades</h4>
-                <button class="btn btn-link" [routerLink]="['/Contacto']"><h4>Más información ></h4></button>
+                <button class="btn btn-link" [routerLink]="['/acercade']"><h4>Más información ></h4></button>
             </div>
         </div>
         <div class="imagenGeneral">
@@ -37,13 +37,13 @@
             <p>
                 Podrás dividir tus productos en categorías, de esta forma podrás ahorrar tiempo en buscar y mostrar a tus clientes los productos disponibles en tu empresa.
             </p>
-            <button class="btn btn-link" [routerLink]="['/Contacto']"><h4>Más información ></h4></button>
+            <button class="btn btn-link" [routerLink]="['/acercade']"><h4>Más información ></h4></button>
             <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/categorias.jpg" alt="" class="imgCategorias">
         </div>
         <div class="subcategorias">
             <h1>Subcategorías</h1>
             <p>¿Dividir tus productos solo por categorías? El sistema te permite también crear subcategorías, esto te ayudará a tener en un mejor orden todos tus productos, de esta forma podrás consultarlos de una forma más profesional.</p>
-            <button class="btn btn-link" [routerLink]="['/Contacto']"><h4>Más información ></h4></button>
+            <button class="btn btn-link" [routerLink]="['/acercade']"><h4>Más información ></h4></button>
             <img src="https://fernand117.github.io/ferdevPortafolio/assets/img/subcategorias.jpg" alt="" class="imgCategorias">
         </div>
     </div>
